Update fly.toml to minimize costs by enabling auto-stop and reducing min machines

--- a/fly.toml
+++ b/fly.toml
@@ -1,24 +1,26 @@
-# fly.toml app configuration file generated for ecotracker-api on 2025-09-05T02:19:29+01:00
+# fly.toml app configuration file generated for ecotracker-api
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'ecotracker-api'
-primary_region = 'ewr'
+app = "ecotracker-api"
+primary_region = "ewr"
 
 [build]
-  dockerfile = 'Dockerfile'
+  dockerfile = "Dockerfile"
 
 [env]
-  PORT = '8080'
+  PORT = "8080"
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = 'off'
+  auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 1
-  processes = ['app']
+  min_machines_running = 0
+  processes = ["app"]
 
 [[vm]]
-  size = 'shared-cpu-1x'
+  cpu_kind = "shared"
+  cpus = 1
+  memory_mb = 256
