--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,21 @@
 {
   "version": 2,
-  "buildCommand": "cd ecotracker && npm install && npm run build",
+  "buildCommand": "cd ecotracker && npm install --no-audit --no-fund && npm run build",
   "outputDirectory": "ecotracker/dist",
-  "framework": "vite",
-  "installCommand": "cd ecotracker && npm install",
+  "framework": null,
+  "installCommand": "cd ecotracker && npm install --no-audit --no-fund",
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
   ]
 }
