--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,3 @@
 {
-  "version": 2,
-  "buildCommand": "cd ecotracker && npm install --no-audit --no-fund && npm run build",
-  "outputDirectory": "ecotracker/dist",
-  "framework": null,
-  "installCommand": "cd ecotracker && npm install --no-audit --no-fund",
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ],
-  "headers": [
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
