--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "ecotracker-root",
   "version": "1.0.0",
   "private": true,
-  "workspaces": [
-    "ecotracker"
-  ],
   "scripts": {
     "build": "cd ecotracker && npm run build",
-    "start": "cd ecotracker && npm start",
+    "start": "cd ecotracker && npm run preview",
     "dev": "cd ecotracker && npm run dev"
   }
 }
