--- a/ecotracker/package.json
+++ b/ecotracker/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build || (echo 'Build failed' && exit 1)",
+    "debug-build": "NODE_ENV=production vite build --debug",
     "lint": "eslint .",
     "preview": "vite preview"
   },
