--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "cd ecotracker && npm run build",
+    "vercel-build": "cd ecotracker && npm install && npm run build",
+    "build": "cd ecotracker && npm install && npm run build",
     "start": "cd ecotracker && npm run preview",
     "dev": "cd ecotracker && npm run dev"
   }
