--- a/.vercelignore
+++ b/.vercelignore
@@ -1,12 +1,25 @@
 .git
-.venv
-__pycache__
-*.pyc
-*.pyo
-*.pyd
+.github
+.vscode
+node_modules
+README.md
+esg-dashboard
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.DS_Store
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
 .Python
-env/
+*.pkl
+.venv
 venv/
 ENV/
-esg-dashboard/
-*.pkl
