--- a/ecotracker/vercel.json
+++ b/ecotracker/vercel.json
@@ -1,5 +1,7 @@
 {
+  "framework": "vite",
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "installCommand": "npm install"
 }
